--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 # API Configuration
-REACT_APP_BACKEND_URL=http://localhost:5000/api
+REACT_APP_BACKEND_URL=https://digilexaibackend.onrender.com/api
 
 # Ethereum Network
 REACT_APP_NETWORK_ID=1
