--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "react-scripts": "5.0.1",
     "three": "^0.174.0",
     "web-vitals": "^2.1.4",
-    "web3": "^4.16.0"
+    "web3": "^4.16.0",
+    "serve": "^14.2.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "dev": "react-app-rewired start",
     "build": "react-app-rewired build",
+    "start": "serve -s build -l $PORT",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
