--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,14 +16,11 @@
     "three": "^0.174.0",
     "web-vitals": "^2.1.4",
     "web3": "^4.16.0",
-    "serve": "^14.2.0",
-    "react-app-rewired": "^2.2.1",
-    "webpack": "^5.76.0"
+    "express": "^4.18.2"
   },
   "scripts": {
-    "dev": "react-app-rewired start",
+    "start": "node server.js",
     "build": "npx react-app-rewired build",
-    "start": "serve -s build -l $PORT",
     "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
@@ -54,6 +51,7 @@
     "https-browserify": "^1.0.0",
     "postcss": "^8.5.3",
     "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "tailwindcss": "^3.4.17",
