--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.2",
+    "express": "^4.18.2",
     "html2pdf.js": "^0.10.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -16,7 +17,7 @@
     "three": "^0.174.0",
     "web-vitals": "^2.1.4",
     "web3": "^4.16.0",
-    "express": "^4.18.2"
+    "webpack": "^5.76.0"
   },
   "scripts": {
     "start": "node server.js",
